fixing other tests from failing now jsut our own